fix landing page

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -28,6 +28,9 @@
           font-size: 35px;
           margin: 0;
           letter-spacing: 1px;
+          @include mobile {
+            font-size: 25px;
+          }
         }
 
         h4 {
@@ -36,6 +39,9 @@
           color: $color-white;
           font-weight: 400;
           letter-spacing: 1.5px;
+          @include mobile {
+            font-size: 10px;
+          }
         }
       }
     }
@@ -68,7 +74,6 @@
     .menu {
       display: none;
       cursor: pointer;
-      
 
       @include mobile {
         display: block;
@@ -82,38 +87,35 @@
 
   &.active {
     header {
+      .navigation {
+        z-index: -1;
+        position: fixed;
+        background: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0) 0%,
+          rgba(0, 0, 0, 1) 0%
+        );
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-        .navigation {
-            z-index: -1;
-            position: fixed;
-            background: linear-gradient(
-                to bottom,
-                rgba(0, 0, 0, 0) 0%,
-                rgba(0, 0, 0, 1) 30%
-              );
-              top: 0;
-              right: 0;
-              left: 0;
-              bottom: 0;
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-              align-items: center;
-
-              a {
-                font-weight: 700;
-                font-size: 30px;
-                margin-right: 0;
-                margin-bottom: 50px;
-                letter-spacing: 2px;
-              }
+        a {
+          font-weight: 700;
+          font-size: 30px;
+          margin-right: 0;
+          margin-bottom: 40px;
+          letter-spacing: 2px;
         }
-
+      }
 
       .menu {
         .open-btn {
           display: none;
-
         }
 
         .close-btn {
