--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -21,6 +21,9 @@
       .logo {
         height: 80px;
         margin-right: 25px;
+        @include mobile {
+          height: 50px;
+        }
       }
 
       .logo-title {
@@ -29,7 +32,7 @@
           margin: 0;
           letter-spacing: 1px;
           @include mobile {
-            font-size: 25px;
+            font-size: 20px;
           }
         }
 
