--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -30,8 +30,10 @@
         h2 {
           font-size: 30px;
           margin: 0;
+          padding-right: 5px;
           letter-spacing: 1px;
-          border: 1px solid red;
+          // border: 1px solid red;
+          
           @include mobile {
             font-size: 20px;
           }
