--- a/src/components/howItWorks/howItWorks.scss
+++ b/src/components/howItWorks/howItWorks.scss
@@ -1,6 +1,8 @@
+@import "../../global.scss";
+
 .howItWorks {
-    min-height: 100vh;
-    position: relative;
+  min-height: 100vh;
+  position: relative;
   background: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0) 15%,
@@ -9,4 +11,46 @@
     url("../../assets/funcionafondo.jpg") no-repeat;
   background-size: cover;
   background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color: $color-white;
+
+  .title {
+    text-align: center;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 5px;
+
+    h2 {
+      font-weight: 900;
+      font-size: 50px;
+      margin-bottom: 15px;
+      letter-spacing: 1px;
+
+      @include mobile {
+        font-size: 30px;
+        margin-top: 60px;
+      }
+    }
+
+    h3 {
+      font-weight: 200;
+      font-size: 35px;
+      letter-spacing: 1px;
+
+      @include mobile {
+        font-size: 20px;
+      }
+    }
+  }
+
+  .cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 }
