--- a/src/components/howItWorks/howItWorks.scss
+++ b/src/components/howItWorks/howItWorks.scss
@@ -20,17 +20,19 @@
     text-align: center;
     max-width: 900px;
     margin: 0 auto;
-    padding: 5px;
+    padding: 10px;
 
     h2 {
       font-weight: 900;
       font-size: 50px;
       margin-bottom: 15px;
       letter-spacing: 1px;
+      margin-top: 50px;
 
       @include mobile {
         font-size: 30px;
         margin-top: 60px;
+        
       }
     }
 
