--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -11,7 +11,7 @@
       rgba(0, 0, 0, 0) 15%,
       rgba(0, 0, 0, 1) 120%
     ),
-    url("../../assets/landing.jpg") no-repeat;
+    url("../../assets/imgclubes.jpg") no-repeat;
   background-size: cover;
   background-position: center;
  
@@ -99,11 +99,12 @@
         font-size: 20px;
         font-weight: 500;
         background-color: $maincolor;
-        align-self: flex-end;
+        align-self: center;
         padding: 10px 25px;
         color: $color-black;
         margin-top: 20px;
         transition: 0.3s;
+        text-align: center;
 
         &:hover {
           background-color: $color-black;
