--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -1,3 +1,4 @@
+@import "../../global.scss";
 .video {
   min-height: 100vh;
   position: relative;
@@ -14,6 +15,9 @@
   justify-content: center;
 
   .video {
-    width: 45%;
+    width: 50%;
+    @include mobile {
+      width: 30%;
+    }
   }
 }
