--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -17,6 +17,8 @@
     .left {
       display: flex;
       align-items: center;
+      border: 1px solid red;
+      padding: 5px;
 
       .logo {
         height: 80px;
