--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -11,7 +11,7 @@
       rgba(0, 0, 0, 0) 15%,
       rgba(0, 0, 0, 1) 120%
     ),
-    url("../../assets/imgclubes.jpg") no-repeat;
+    url("../../assets/landing.jpg") no-repeat;
   background-size: cover;
   background-position: center;
  
