--- a/src/components/cardClub/cardClub.scss
+++ b/src/components/cardClub/cardClub.scss
@@ -22,6 +22,7 @@
   .content {
     background-color: red;
     width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.581);
 
     &:hover {
