--- a/src/components/cardClub/cardClub.scss
+++ b/src/components/cardClub/cardClub.scss
@@ -19,27 +19,46 @@
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+
   .content {
-    background-color: red;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.581);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     &:hover {
       background-color: rgba(255, 255, 255, 0.066);
     }
+
     h4 {
       letter-spacing: 1px;
       font-size: 45px;
       margin-bottom: 10px;
+
+      @include mobile {
+        font-size: 38px;
+      }
     }
+
     h5 {
       font-size: 30px;
       color: $color-white;
+
+      @include mobile {
+        font-size: 25px;
+      }
     }
+
     h6 {
-      font-size: 15px;
+      font-size: 20px;
       margin-bottom: 5px;
+
+      @include mobile {
+        font-size: 18px;
+      }
     }
   }
 }
