--- a/src/components/clubs/clubs.scss
+++ b/src/components/clubs/clubs.scss
@@ -1,16 +1,10 @@
 @import "../../global.scss";
 
 .clubs {
-//   background: linear-gradient(
-//       to top,
-//       rgba(0, 0, 0, 0) 15%,
-//       rgba(0, 0, 0, 1) 120%
-//     ),
-//     url("../../assets/funcionafondo.jpg") no-repeat;
+  background-color: $color-white;
   background-size: cover;
   background-position: center;
   padding: 70px 0px;
-
 
   h2 {
     font-size: 40px;
@@ -21,7 +15,7 @@
     letter-spacing: 1.3px;
 
     @include mobile {
-        font-size: 30px;
-      }
+      font-size: 30px;
+    }
   }
 }
