--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -2,7 +2,8 @@
 .video {
   min-height: 100vh;
   position: relative;
-  background: linear-gradient(
+  background:
+   linear-gradient(
       to top,
       rgba(0, 0, 0, 0) 0%,
       rgba(0, 0, 0, 1) 100%
