--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -11,9 +11,13 @@
       rgba(0, 0, 0, 0) 15%,
       rgba(0, 0, 0, 1) 120%
     ),
-    url("../../assets/landing.png") no-repeat;
+    url("../../assets/portada.jpg") no-repeat;
   background-size: cover;
   background-position: center;
+
+  @include mobile {
+    background-position: center;
+  }
 
   .content {
     background-color: rgba(0, 0, 0, 0.581);
@@ -61,7 +65,6 @@
 
           @include mobile {
             margin: 0;
-            // border: 1px solid red;
             display: flex;
             flex-direction: column;
             text-align: center;
@@ -87,7 +90,7 @@
       .btn {
         color: $color-white;
         text-decoration: none;
-        font-size: 20px;
+        font-size: 30px;
         font-weight: 500;
         background-color: $maincolor;
         align-self: center;
@@ -100,10 +103,14 @@
         &:hover {
           background-color: $color-black;
           color: $maincolor;
+          -webkit-box-shadow: 0px 0px 68px -3px rgba(252, 203, 41, 0.96);
+          -moz-box-shadow: 0px 0px 68px -3px rgba(252, 203, 41, 0.96);
+          box-shadow: 0px 0px 68px -3px rgba(252, 203, 41, 0.96);
         }
 
         @include mobile {
           align-self: center;
+          font-size: 20px;
         }
       }
     }
