--- a/src/components/steps/steps.scss
+++ b/src/components/steps/steps.scss
@@ -60,7 +60,7 @@
       }
 
       p {
-        font-size: 1rem;
+        font-size: 22px;
         font-weight: 300;
         color: rgba(255, 255, 255, 0.9);
         z-index: 1;
