--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -37,6 +37,7 @@
       font-size: 30px;
       letter-spacing: 1px;
       margin-bottom: 40px;
+      font-weight: 400;
 
       @include mobile {
         font-size: 20px;
