--- a/src/components/steps/steps.scss
+++ b/src/components/steps/steps.scss
@@ -11,6 +11,7 @@
   margin: 30px;
   transition: 0.5s;
 
+
   @include mobile {
     height: 350px;
   }
@@ -85,7 +86,7 @@
         margin-top: 20px;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         transition: 0.5s;
-
+        font-size: large;
         &:hover {
           box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
           background: #fff;
